Fixed icon size bug + updated some alignments in CSS

--- a/src/weather-style.css
+++ b/src/weather-style.css
@@ -173,7 +173,7 @@ video {
     font-size: 20px;
     text-align: left;
     flex-direction: column;
-    align-items: center;
+    align-content: center;
 }
 .details .unit {
     font-size: 15px;
@@ -197,7 +197,7 @@ video {
     margin-top: 12px;
     text-align: center;
 }
-.weather-icon-small {
+.week-forecast-icon {
     color: #4a4a4a;
     font-size: 24px;
     text-align: center;
